Fixed main and section gaps

--- a/src/style.css
+++ b/src/style.css
@@ -30,11 +30,12 @@ body {
 /*--- Do not modify the content above ---*/
 
 main {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     max-width: auto;
     margin: 0 auto;
     width: 90%;
-    /*  margin-left: 24px;
-    margin-right: 24px;*/
     color: var(--fifth-color);
 }
 
@@ -57,6 +58,11 @@ h1 {
     align-items: center;
 }
 
+section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 /*---------- Profile div ----------*/
 
 div img {
@@ -69,7 +75,7 @@ div img {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-top: 20px;
+    padding-top: 1rem;
 }
 
 #info {
@@ -111,8 +117,6 @@ button {
     justify-content: space-between;
     align-items: center;
     gap: 24px;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -219,11 +223,10 @@ input:not(:placeholder-shown) {
 
 .section-header {
     display: flex;
-    align-self: flex-start;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-top: 1rem;
+    max-width: auto;
 }
 
 .section-header a {
@@ -238,7 +241,6 @@ input:not(:placeholder-shown) {
     white-space: nowrap;
     overflow: hidden;
     padding: 1rem 0 1rem 0;
-    max-width: 1000px;
 }
 
 .header-carousel {
@@ -247,10 +249,6 @@ input:not(:placeholder-shown) {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.card-wilders {
-    width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -379,9 +377,86 @@ input:not(:placeholder-shown) {
     background-position: center;
 }
 
+/*--------- Wilders Profiles ----------*/
+
+.card-wilders {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+#cardscontainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    background-color: #F1F2F6;
+    padding: none;
+}
+
+.imageronde {
+    clip-path: ellipse(50% 50%);
+    height: 75px;
+    width: 75px;
+    margin-left: 15%;
+}
+
+.profile-card {
+    background-color: var(--light);
+    border-radius: 25px;
+    padding: 20px;
+    border: 1px solid var(--first-color);
+    width: 150px;
+    height: 190px;
+}
+
+.cardName {
+    display: flex;
+    justify-content: center;
+}
+
+.personJob {
+    display: flex;
+    justify-content: center;
+}
+
+.cardName h2 {
+    color: black(104, 102, 102);
+    font-family: "Lato", sans-serif;
+    font-size: var(--font-size);
+}
+
+.personJob h3 {
+    display: flex;
+    justify-content: center;
+    color: rgb(165, 164, 164);
+    width: 100%;
+    font-family: "Lato", sans-serif;
+    margin: 0px;
+    font-size: var(--font-size);
+}
+
+.viewmorebutton {
+    left: 10%;
+    top: 5%;
+    position: relative;
+    cursor: pointer;
+    border: 1px solid var(--first-color);
+    background-color: #f997974f;
+    color: var(--third-color);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.15);
+    padding: 5px 10px 5px 10px;
+    border-radius: 20px;
+}
+
+
 /* --------------------------------------------------------------------------------- */
 
-/* Profile */
+/* Profile single */
 .title-profile h2 {
     font-size: var(--title-font-size);
     text-align: center;
@@ -534,75 +609,7 @@ ul {
     z-index: 5;
 }
 
-  /*--------- Wilders Profile ----------*/
-
-#cardscontainer {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    background-color: #F1F2F6;
-    justify-content: center;
-    padding: none;
-    flex-direction: row;
-    column-gap: 1rem;
-    row-gap: 1.5rem;
-    margin: 1rem 0 1rem 0;
-}
-
-.imageronde {
-    clip-path: ellipse(50% 50%);
-    height: 75px;
-    width: 75px;
-    margin-left: 15%;
-}
-
-.profile-card {
-    background-color: var(--light);
-    border-radius: 25px;
-    padding: 20px;
-    border: 1px solid var(--first-color);
-    width: 150px;
-    height: 190px;
-}
-
-.cardName {
-    display: flex;
-    justify-content: center;
-}
-
-.personJob {
-    display: flex;
-    justify-content: center;
-}
-
-.cardName h2 {
-    color: black(104, 102, 102);
-    font-family: "Lato", sans-serif;
-    font-size: var(--font-size);
-}
-
-.personJob h3 {
-    display: flex;
-    justify-content: center;
-    color: rgb(165, 164, 164);
-    width: 100%;
-    font-family: "Lato", sans-serif;
-    margin: 0px;
-    font-size: var(--font-size);
-}
-
-.viewmorebutton {
-    left: 10%;
-    top: 5%;
-    position: relative;
-    cursor: pointer;
-    border: 1px solid var(--first-color);
-    background-color: #f997974f;
-    color: var(--third-color);
-    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.15);
-    padding: 5px 10px 5px 10px;
-    border-radius: 20px;
-}
+  
 
   /*--------- Nav Mobile ----------*/
 
@@ -615,7 +622,7 @@ ul {
 /* Portrait and Landscape */
 @media (max-width: 480px) {  
 html body #mobile-nav {
-    background-color: var(--fifth-color);
+    background-color: var(--dark);
     opacity: 0.8;
     padding: 0.875rem;
     position: fixed;
@@ -683,35 +690,68 @@ html body #mobile-nav {
 } */
 
 #desktop-nav {
+    background-color: var(--dark);
     opacity: 0.8;
     width: 100%;
-    height: 3vh;
+    height: 5vh;
     min-height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--fifth-color);
 }
 
 #desktop-nav ul {
+    width: 50%;
     list-style: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 0;
-    margin-right: 3rem;
 }
 
 #desktop-nav ul li a {
     color: var(--first-color);
     text-decoration: none;
-    font-size: 1rem;
-    align-items: center;
-    padding: 0 1rem 0 1rem;
+    font-size: var(--title-font-size);
     text-transform: uppercase;
+    align-items: center;
 }
 
 #mobile-nav {
     display: none;
+}
+
+article h1, article p {
+    color: var(--light);
+    text-align: center;
+}
+
+article h1 {
+    font-size: 4em;
+    text-transform: capitalize;
+}
+
+article p {
+    font-size: 1.5em;
+    width: 80%;
+    margin-top: 10px;
+}
+  
+article section {
+    width: 100%;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+  
+@media (min-width: 480px) and (max-width: 1000px) {
+    article h1 {
+      font-size: 3em;
+    }
 }
 
 @media (max-width: 480px) {
@@ -723,7 +763,7 @@ html body #mobile-nav {
 #mobile-nav {
     position: fixed;
     width: 100%;
-    height: 5vh;
+    height: 10vh;
     min-height: 50px;
     display: flex;
     justify-content: flex-start;
@@ -742,6 +782,7 @@ html body #mobile-nav {
     position: absolute;
     top: 0px;
     transform: translatex(-100vw);
+    background-color: rgba(0, 0, 0, 0.8);
     width: 100%;
     height: 100vh;
     display: flex;
@@ -762,6 +803,18 @@ html body #mobile-nav {
     font-size: 2em;
     text-transform: uppercase;
     border-bottom: 1px solid var(--light);
+}
+
+article h1 {
+    font-size: 2em;
+}
+
+article p {
+    font-size: 1em;
+}
+
+article #contact {
+    background-position: top;
 }
 
   
